<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_apps"
        android:icon="@drawable/ic_nav_apps"
        android:title="@string/tab_apps" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/tab_activity" />
    <item
        android:id="@+id/nav_domains"
        android:icon="@drawable/ic_nav_domains"
        android:title="@string/tab_domains" />
    <item
        android:id="@+id/nav_trackers"
        android:icon="@drawable/ic_nav_block"
        android:title="@string/tab_trackers" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/tab_settings" />
</menu>
